FIxed group sizes alignment

--- a/app/components/board/board.component.less
+++ b/app/components/board/board.component.less
@@ -12,6 +12,12 @@
     }
   }
 
+  thead {
+    th {
+      vertical-align: bottom;
+    }
+  }
+
   th {
     padding: 2px 3px;
   }
